--- a/ElectricityNetView/DashboardPage.xaml
+++ b/ElectricityNetView/DashboardPage.xaml
@@ -153,8 +153,8 @@
                     <StackPanel Orientation="Horizontal">
                         <Button Name="ButtonExampleBus" Click="ButtonExampleBus_Click">Bus</Button>
                         <Button Name="ButtonExampleLine" Click="ButtonExampleLine_Click">Line</Button>
-                        <Button Name="ButtonExampleG" Click="ButtonExampleG_Click">G</Button>
-                        <Button Name="ButtonExampleHis" Click="ButtonExampleHis_Click">His</Button>
+                        <DatePicker Name="DatePickerExampleDay"></DatePicker>
+                        <Button Name="ButtonExampleDay" Click="ButtonExampleDay_Click">G</Button>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal">
                         <TextBlock>Center</TextBlock>
@@ -166,8 +166,6 @@
                         <TextBox Name="TextBoxLabel">121,31</TextBox>
                         <Button Name="ButtonParaLabel" Click="ButtonParaLabel_Click">Set</Button>
                     </StackPanel>
-                    <TextBox Name="TextBoxConsole"></TextBox>
-
                     <StackPanel Orientation="Horizontal">
                         <TextBlock>PushChart</TextBlock>
                         <TextBox Name="TextBoxPushChart">121</TextBox>
